--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -267,6 +267,6 @@
     margin-bottom: 0.25em;
   }
 
-.book-expand div {
+.book-expand-head.flex.justify-between {
   margin-bottom: 0em;
 }
