--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -50,6 +50,7 @@
       border-top: $padding-1 solid #b8c1d1;
       padding: $padding-16;
       display: none;
+      color: #3b4252;            
     }
 
     .book-tabs-content.markdown-inner a {
